--- a/backend/RecipeFriends.Shared/RecipeFriends.Shared.csproj
+++ b/backend/RecipeFriends.Shared/RecipeFriends.Shared.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="DTO\v1\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTO\v1\" />
+  </ItemGroup>
 </Project>
