--- a/shared/RecipeFriends.Data/RecipeFriends.Data.csproj
+++ b/shared/RecipeFriends.Data/RecipeFriends.Data.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RecipeFriends.DTO\RecipeFriends.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
