--- a/mauiblazor/RecipeFriends/RecipeFriends.csproj
+++ b/mauiblazor/RecipeFriends/RecipeFriends.csproj
@@ -16,7 +16,7 @@
         <ApplicationTitle>RecipeFriends</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.recipefriends</ApplicationId>
+        <ApplicationId>org.petteflet.recipefriends</ApplicationId>
         <ApplicationIdGuid>C6155DD4-6488-419D-9FE9-7455684F63BB</ApplicationIdGuid>
 
         <!-- Versions -->
@@ -30,9 +30,7 @@
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
     </PropertyGroup>
-<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst' and '$(Configuration)' == 'Debug'">
-    <CodeSignEntitlements>Platforms/MacCatalyst/Entitlements.Debug.plist</CodeSignEntitlements>
-</PropertyGroup>
+
     <ItemGroup>
         <!-- App Icon -->
         <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -49,39 +47,25 @@
 
         <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
-    </ItemGroup>
-
-    <!-- <ItemGroup>
-      <Content Remove="Pages/RecipeEdit.razor" />
-      <Content Remove="Pages/RecipeList.razor" />
-    </ItemGroup>
+    </ItemGroup> 
 
     <ItemGroup>
-      <None Remove="Pages/RecipeEdit.razor.css" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Compile Include="Pages/RecipeEdit.razor" />
-      <Compile Include="Pages/RecipeEdit.razor.css" />
-      <Compile Include="Pages/RecipeList.razor" />
-    </ItemGroup> -->
-
-    <ItemGroup>
+        <PackageReference Include="MarkdownPdf" Version="1.0.0" />
         <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-          <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.10" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="NLog" Version="5.2.4" />
+        <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.11" />
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\shared\RecipeFriends.DTO\RecipeFriends.DTO.csproj" />
-      <ProjectReference Include="..\..\shared\RecipeFriends.Data\RecipeFriends.Data.csproj" />
+        <ProjectReference Include="..\..\shared\RecipeFriends.DTO\RecipeFriends.DTO.csproj" />
+        <ProjectReference Include="..\..\shared\RecipeFriends.Data\RecipeFriends.Data.csproj" />
     </ItemGroup>
-
 </Project>
