--- a/mauiblazor/.vscode/extensions.json
+++ b/mauiblazor/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
     "recommendations": [
+        "ms-dotnettools.csharp",
+        "ms-dotnettools.csdevkit",
         "ms-dotnettools.dotnet-maui",
         "fullstackspider.visual-nuget"
     ]
