--- a/mauiblazor/.vscode/launch.json
+++ b/mauiblazor/.vscode/launch.json
@@ -9,6 +9,12 @@
             "type": "maui",
             "request": "launch",
             "preLaunchTask": "maui: Build"
+        },
+        {
+            "name": ".NET Meteor Debugger",
+            "type": "dotnet-meteor.debugger",
+            "request": "launch",
+            "preLaunchTask": "dotnet-meteor: Build"
         }
     ]
 }
