View recipe as html generated from markdown

--- a/mauiblazor/RecipeFriends/RecipeFriends.csproj
+++ b/mauiblazor/RecipeFriends/RecipeFriends.csproj
@@ -50,7 +50,10 @@
     </ItemGroup> 
 
     <ItemGroup>
+        <PackageReference Include="Blazored.Modal" Version="7.1.0" />
         <PackageReference Include="MarkdownPdf" Version="1.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.10" />
+
         <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
@@ -58,6 +61,7 @@
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.10" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="NLog" Version="5.2.4" />
         <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.11" />
@@ -67,5 +71,6 @@
     <ItemGroup>
         <ProjectReference Include="..\..\shared\RecipeFriends.DTO\RecipeFriends.DTO.csproj" />
         <ProjectReference Include="..\..\shared\RecipeFriends.Data\RecipeFriends.Data.csproj" />
+        <ProjectReference Include="..\..\shared\RecipeFriends.Shared.Markdown\RecipeFriends.Shared.Markdown.csproj" />
     </ItemGroup>
 </Project>
