--- a/mauiblazor/.vscode/tasks.json
+++ b/mauiblazor/.vscode/tasks.json
@@ -10,6 +10,16 @@
 				"$msCompile"
 			],
 			"label": "maui: Build"
+		},
+		{
+			"type": "maui",
+			"targetFramework": "net7.0-windows10.0.19041.0",
+			"configuration": "Debug",
+			"project": "c:\\Repos\\github\\recipe-friends\\mauiblazor\\RecipeFriends\\RecipeFriends.csproj",
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"label": "maui: Build"
 		}
 	]
 }
