Restructure a bit to be more in line with new project layout

--- a/mauiblazor/.vscode/tasks.json
+++ b/mauiblazor/.vscode/tasks.json
@@ -30,6 +30,16 @@
 				"$msCompile"
 			],
 			"label": "maui: Build"
+		},
+		{
+			"type": "maui",
+			"targetFramework": "net8.0-maccatalyst",
+			"configuration": "Debug",
+			"project": "/Users/pieter/Documents/workspace/recipe-friends/mauiblazor/RecipeFriends/RecipeFriends.csproj",
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"label": "maui: Build"
 		}
 	]
 }
