--- a/mauiblazor/.vscode/tasks.json
+++ b/mauiblazor/.vscode/tasks.json
@@ -3,43 +3,23 @@
 	"tasks": [
 		{
 			"type": "maui",
-			"targetFramework": "net7.0-maccatalyst",
+			// "targetFramework": "net8.0-windows10.0.19041.0",
 			"configuration": "Debug",
-			"project": "/Users/pieter/Documents/workspace/recipe-friends/mauiblazor/RecipeFriends/RecipeFriends.csproj",
+			"project": "${workspaceFolder}\\RecipeFriends\\RecipeFriends.csproj",
 			"problemMatcher": [
 				"$msCompile"
 			],
-			"label": "maui: Build"
+			"label": "maui: Build Windows"
 		},
 		{
 			"type": "maui",
-			"targetFramework": "net7.0-windows10.0.19041.0",
+			// "targetFramework": "net8.0-maccatalyst",
 			"configuration": "Debug",
-			"project": "c:\\Repos\\github\\recipe-friends\\mauiblazor\\RecipeFriends\\RecipeFriends.csproj",
+			"project": "${workspaceFolder}\\RecipeFriends\\RecipeFriends.csproj",
 			"problemMatcher": [
 				"$msCompile"
 			],
-			"label": "maui: Build"
-		},
-		{
-			"type": "maui",
-			"targetFramework": "net8.0-windows10.0.19041.0",
-			"configuration": "Debug",
-			"project": "c:\\Repos\\github\\recipe-friends\\mauiblazor\\RecipeFriends\\RecipeFriends.csproj",
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"label": "maui: Build"
-		},
-		{
-			"type": "maui",
-			"targetFramework": "net8.0-maccatalyst",
-			"configuration": "Debug",
-			"project": "/Users/pieter/Documents/workspace/recipe-friends/mauiblazor/RecipeFriends/RecipeFriends.csproj",
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"label": "maui: Build"
+			"label": "maui: Build Mac"
 		}
 	]
 }
