--- a/mauiblazor/RecipeFriends/RecipeFriends.csproj
+++ b/mauiblazor/RecipeFriends/RecipeFriends.csproj
@@ -52,10 +52,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
-        <PackageReference Include="MarkdownPdf" Version="1.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0-rc.1.23421.29" />
-
         <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0-rc.1.23419.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-rc.1.23419.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-rc.1.23419.6">
@@ -66,18 +62,22 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0-rc.1.23419.4" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-rc.1.23419.4" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-rc.1.9171" />
-        <!--<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-rc.1.9171" />-->        
+        <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0-rc.1.23421.29" />
+        <PackageReference Include="SixLabors.Fonts" Version="2.0.0" />
+        <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />    
+        <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
         <PackageReference Include="MudBlazor" Version="6.10.0" />
-        <PackageReference Include="MudBlazor.Markdown" Version="0.1.2" />
-        <PackageReference Include="NLog" Version="5.2.4" />
         <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.11" />
-        <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />      
+        <PackageReference Include="NLog" Version="5.2.4" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.4" />
+        <PackageReference Include="NLog.Targets.MauiLog" Version="5.2.0" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\shared\RecipeFriends.DTO\RecipeFriends.DTO.csproj" />
         <ProjectReference Include="..\..\shared\RecipeFriends.Data\RecipeFriends.Data.csproj" />
         <ProjectReference Include="..\..\shared\RecipeFriends.Shared.Markdown\RecipeFriends.Shared.Markdown.csproj" />
+        <ProjectReference Include="..\..\shared\RecipeFriends.Shared.PDF\RecipeFriends.Shared.PDF.csproj" />
     </ItemGroup>
 
     <!-- Build Properties must be defined within these property groups to ensure successful publishing
