--- a/mauiblazor/.vscode/tasks.json
+++ b/mauiblazor/.vscode/tasks.json
@@ -1,25 +1,25 @@
 {
 	"version": "2.0.0",
 	"tasks": [
+		// {
+		// 	"type": "maui",
+		// 	"targetFramework": "net8.0-windows10.0.19041.0",
+		// 	"configuration": "Debug",
+		// 	"project": "${workspaceFolder}\\RecipeFriends\\RecipeFriends.csproj",
+		// 	"problemMatcher": [
+		// 		"$msCompile"
+		// 	],
+		// 	"label": "maui: Build"
+		// },
 		{
 			"type": "maui",
-			// "targetFramework": "net8.0-windows10.0.19041.0",
+			"targetFramework": "net8.0-maccatalyst",
 			"configuration": "Debug",
-			"project": "${workspaceFolder}\\RecipeFriends\\RecipeFriends.csproj",
+			"project": "/Users/pieter/Documents/workspace/recipe-friends/mauiblazor/RecipeFriends/RecipeFriends.csproj",
 			"problemMatcher": [
 				"$msCompile"
 			],
-			"label": "maui: Build Windows"
-		},
-		{
-			"type": "maui",
-			// "targetFramework": "net8.0-maccatalyst",
-			"configuration": "Debug",
-			"project": "${workspaceFolder}\\RecipeFriends\\RecipeFriends.csproj",
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"label": "maui: Build Mac"
+			"label": "maui: Build"
 		}
 	]
 }
