Refactor and fixes adding new Recipe

--- a/mauiblazor/.vscode/extensions.json
+++ b/mauiblazor/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "ms-dotnettools.csharp",
         "ms-dotnettools.csdevkit",
         "ms-dotnettools.dotnet-maui",
-        "fullstackspider.visual-nuget"
+        "fullstackspider.visual-nuget",
+        "esbenp.prettier-vscode"
     ]
 }
