--- a/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
+++ b/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
@@ -4,7 +4,9 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false">
-
+  <extensions>
+      <add assembly="NLog.Targets.MauiLog" />
+  </extensions>
   <targets>
    <target xsi:type="File" name="file" 
       fileName="${tempdir:dir=recipe-friends:file=log.log"
@@ -19,10 +21,12 @@
       layout="${longdate} ${uppercase:${level}} ${message}${exception:format=tostring}" /> -->
     <target xsi:type="Console" name="console" 
       layout="${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=${newline}}" />
+    <target name="mauilog" type="MauiLog" />
   </targets> 
 
   <rules>
     <logger name="*" minlevel="Debug" writeTo="file" />
     <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" minLevel="Debug" writeTo="mauilog" />
   </rules>
 </nlog>
