--- a/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
+++ b/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
@@ -8,17 +8,14 @@
       <add assembly="NLog.Targets.MauiLog" />
   </extensions>
   <targets>
-   <target xsi:type="File" name="file" 
-      fileName="${tempdir:dir=recipe-friends:file=log.log"
-      archiveFileName="log.{####}.log"
+   <target xsi:type="File" name="file"       
+      fileName="${specialfolder:folder=MyDocuments}/recipe-friends/logs/recipefriends.${date:format=yyyyMMdd}.log" 
+      archiveFileName="${specialfolder:folder=MyDocuments}/recipe-friends/logs/recipefriends.{####}.log.zip"
       layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=\r\n}" 
-      archiveAboveSize="102400" maxArchiveFiles="5" 
+      archiveAboveSize="5242880" maxArchiveFiles="5" 
       archiveEvery="Day" archiveDateFormat="yyyyMMdd" 
       archiveNumbering="DateAndSequence"
       enableArchiveFileCompression="true"/> 
-    <!-- <target xsi:type="File" name="file" 
-      fileName="${specialfolder:folder=MyDocuments}/../Library/logs/${shortdate}.log" 
-      layout="${longdate} ${uppercase:${level}} ${message}${exception:format=tostring}" /> -->
     <target xsi:type="Console" name="console" 
       layout="${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=${newline}}" />
     <target name="mauilog" type="MauiLog" />
