--- a/mauiblazor/.vscode/launch.json
+++ b/mauiblazor/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": ".NET MAUI",
             "type": "maui",
             "request": "launch",
-            "preLaunchTask": "maui: Build"            
+            "preLaunchTask": "maui: Build2"            
         },
         {
             "name": ".NET Meteor Debugger",
