--- a/mauiblazor/.vscode/launch.json
+++ b/mauiblazor/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": ".NET MAUI",
             "type": "maui",
             "request": "launch",
-            "preLaunchTask": "maui: Build2"            
+            "preLaunchTask": "maui: Build"            
         },
         {
             "name": ".NET Meteor Debugger",
