--- a/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
+++ b/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
@@ -9,8 +9,8 @@
   </extensions>
   <targets>
    <target xsi:type="File" name="file"       
-      fileName="${specialfolder:folder=MyDocuments}/Recipe Friends/logs/recipefriends.${date:format=yyyyMMdd}.log" 
-      archiveFileName="${specialfolder:folder=MyDocuments}/Recipe Friends/logs/recipefriends.{####}.log.zip"
+      fileName="${gdc:item=logpath}/recipefriends.${date:format=yyyyMMdd}.log" 
+      archiveFileName="${gdc:item=logpath}/recipefriends.{####}.log.zip"
       layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=\r\n}" 
       archiveAboveSize="5242880" maxArchiveFiles="5" 
       archiveEvery="Day" archiveDateFormat="yyyyMMdd" 
