--- a/mauiblazor/.vscode/launch.json
+++ b/mauiblazor/.vscode/launch.json
@@ -4,18 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": ".NET MAUI",
             "type": "maui",
             "request": "launch",
-            "preLaunchTask": "maui: Build"            
+            "preLaunchTask": "dotnet-meteor: Build",
+            "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "name": ".NET Meteor Debugger",
             "type": "dotnet-meteor.debugger",
             "request": "launch",
-            "preLaunchTask": "dotnet-meteor: Build"
+            "preLaunchTask": "dotnet-meteor: Build",
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
