Adding images to the recipe

--- a/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
+++ b/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
@@ -18,12 +18,16 @@
       enableArchiveFileCompression="true"/> 
     <target xsi:type="Console" name="console" 
       layout="${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=${newline}}" />
-    <target name="mauilog" type="MauiLog" />
+    <target name="mauilog" type="MauiLog"  
+      layout="${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=${newline}}" />
   </targets> 
 
   <rules>
+    <logger name="Microsoft.AspNetCore.Components.*" maxLevel="Info" final="true" /> <!-- blackhole -->
+    <logger name="MudBlazor.*" maxLevel="Info" final="true" /> <!-- blackhole -->
+
     <logger name="*" minlevel="Debug" writeTo="file" /> 
-    <logger name="*" minlevel="Debug" writeTo="console" /> 
+    <!-- <logger name="*" minlevel="Debug" writeTo="console" /> -->  
     <logger name="*" minLevel="Debug" writeTo="mauilog" />
   </rules>
 </nlog>
