--- a/shared/RecipeFriends.Console/RecipeFriends.Console.csproj
+++ b/shared/RecipeFriends.Console/RecipeFriends.Console.csproj
@@ -14,7 +14,7 @@
 
    
         <ItemGroup>
-          <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+          <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-rc.2.23480.1">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
           </PackageReference>
