Support deleting images from a recipe

--- a/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
+++ b/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
@@ -27,7 +27,7 @@
     <logger name="MudBlazor.*" maxLevel="Info" final="true" /> <!-- blackhole -->
 
     <logger name="*" minlevel="Debug" writeTo="file" /> 
-    <!-- <logger name="*" minlevel="Debug" writeTo="console" /> -->  
-    <logger name="*" minLevel="Debug" writeTo="mauilog" />
+    <logger name="*" minlevel="Debug" writeTo="console" />
+    <!--<logger name="*" minLevel="Debug" writeTo="mauilog" /> -->
   </rules>
 </nlog>
