--- a/mauiblazor/RecipeFriends/RecipeFriends.csproj
+++ b/mauiblazor/RecipeFriends/RecipeFriends.csproj
@@ -12,6 +12,7 @@
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
         <EnableConfigurationBindingGenerator>true</EnableConfigurationBindingGenerator>
         
@@ -73,6 +74,7 @@
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-rc.2.9373+sha.19fc25a562-azdo.8494874" />
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0-rc.2.23480.2" />
         <PackageReference Include="SixLabors.Fonts" Version="2.0.0" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />    
         <PackageReference Include="CommunityToolkit.Maui" Version="6.0.0" />
         <PackageReference Include="MudBlazor" Version="6.11.0" />
