--- a/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
+++ b/mauiblazor/RecipeFriends/Resources/Embedded/NLog.config
@@ -17,13 +17,14 @@
       archiveNumbering="DateAndSequence"
       enableArchiveFileCompression="true"/> 
     <target xsi:type="Console" name="console" 
-      layout="${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=${newline}}" />
+      layout="${logger} ${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=${newline}}" />
     <target name="mauilog" type="MauiLog"  
       layout="${uppercase:${level}} ${message} ${exception:format=tostring,data:maxInnerExceptionLevel=10:separator=${newline}}" />
   </targets> 
 
   <rules>
     <logger name="Microsoft.AspNetCore.Components.*" maxLevel="Info" final="true" /> <!-- blackhole -->
+    <logger name="Microsoft.EntityFrameworkCore.*" maxLevel="Info" final="true" /> <!-- blackhole -->
     <logger name="MudBlazor.*" maxLevel="Info" final="true" /> <!-- blackhole -->
 
     <logger name="*" minlevel="Debug" writeTo="file" /> 
