--- a/shared/RecipeFriends.Shared.Data/RecipeFriends.Shared.Data.csproj
+++ b/shared/RecipeFriends.Shared.Data/RecipeFriends.Shared.Data.csproj
@@ -15,11 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0-rc.2.23480.1" />
     <PackageReference Include="NLog" Version="5.2.4" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.4" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\RecipeFriends.Shared.DTO\RecipeFriends.Shared.DTO.csproj" />
-  </ItemGroup>
-
 </Project>
