--- a/shared/RecipeFriends.Shared.PDF/RecipeFriends.Shared.PDF.csproj
+++ b/shared/RecipeFriends.Shared.PDF/RecipeFriends.Shared.PDF.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.33.0" />
+    <PackageReference Include="NLog" Version="5.2.5" />
     <PackageReference Include="QuestPDF" Version="2023.9.1" />
     <PackageReference Include="SkiaSharp" Version="2.88.6" />
     <PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.6" />
