--- a/mauiblazor/RecipeFriends/RecipeFriends.csproj
+++ b/mauiblazor/RecipeFriends/RecipeFriends.csproj
@@ -62,26 +62,26 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0-rc.2.23480.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-rc.2.23480.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-rc.2.23480.1">
+        <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0-rc.2.23480.1" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0-rc.2.23479.6" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-rc.2.23479.6" />
-        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-rc.2.9373+sha.19fc25a562-azdo.8494874" />
-        <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0-rc.2.23480.2" />
-        <PackageReference Include="SixLabors.Fonts" Version="2.0.0" />
-        <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.3+2-sha.1ebb238ff3-azdo.8651303" />
+        <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0" />
+        <PackageReference Include="SixLabors.Fonts" Version="2.0.1" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />    
-        <PackageReference Include="CommunityToolkit.Maui" Version="6.0.0" />
-        <PackageReference Include="MudBlazor" Version="6.11.0" />
-        <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.17" />
-        <PackageReference Include="NLog" Version="5.2.5" />
-        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
-        <PackageReference Include="NLog.Targets.MauiLog" Version="5.2.0" />
+        <PackageReference Include="CommunityToolkit.Maui" Version="7.0.1" />
+        <PackageReference Include="MudBlazor" Version="6.12.0" />
+        <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.19" />
+        <PackageReference Include="NLog" Version="5.2.8" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.8" />
+        <PackageReference Include="NLog.Targets.MauiLog" Version="5.2.1" />
     </ItemGroup>
 
     <ItemGroup>
