Removed usage of SkiaSharp functions from QuestPdf calls

--- a/mauiblazor/RecipeFriends/RecipeFriends.csproj
+++ b/mauiblazor/RecipeFriends/RecipeFriends.csproj
@@ -90,6 +90,13 @@
       <ProjectReference Include="..\..\shared\RecipeFriends.Shared.PDF\RecipeFriends.Shared.PDF.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Remove="NLog.config" />
+    </ItemGroup>
+    <!-- <ItemGroup>
+        <EmbeddedResource Include="NLog.config" />
+    </ItemGroup>  -->
+
     <!-- Build Properties must be defined within these property groups to ensure successful publishing
         to the Mac App Store. See: https://aka.ms/maui-publish-app-store#define-build-properties-in-your-project-file -->
     <PropertyGroup Condition="$(TargetFramework.Contains('-maccatalyst')) and '$(Configuration)' == 'Debug'">
